--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,1 +1,13 @@
-<p>product-list works!</p>
+<div class="row">
+    <div class="col-xs-12">
+      <button class="btn btn-success" >New recipe</button>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-xs-12">
+        <app-product-item *ngFor="let productEl of products ;let i=index"
+        [product]="productEl"
+        [index]="i"></app-product-item>
+    </div>
+</div>
