Add Prtodduct Details

--- a/src/app/product-list/product-detail/product-detail.component.html
+++ b/src/app/product-list/product-detail/product-detail.component.html
@@ -1,1 +1,51 @@
-<p>product-detail works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <img style="max-height: 300px;"
+         [src]="product.image" alt="{{product.name}}" class="img-responsive">
+ 
+    </div>
+ </div>
+ <div class="row">
+     <div class="col-xs-12">
+         <h1>{{product.name}}</h1>
+     </div>
+ </div>
+ <div class="row">
+     <div class="col-xs-12">
+         <!-- <div class="btn-group" appDropdown>
+             <button type="button" class="btn btn-primary dropdown-toggle">
+                 Manage Product<span class="caret"></span>
+             </button>
+             <ul class="dropdown-menu">
+                 <li><a style="cursor: pointer;">Edit Recipe</a></li>
+                 <li><a style="cursor: pointer;">Delete Recipe</a></li>
+             </ul>
+         </div> -->
+         <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+     </div>
+ </div>
+ <div class="row">
+     <div class="col-xs-12">
+         {{product.description}}
+     </div>
+ </div>
+ <div class="row">
+     <div class="col-xs-12">
+         <ul class="list-group">
+             <li class="list-group-item"
+             *ngFor="let tag of product.tags"
+             >
+             {{tag}}
+             </li>
+         </ul>
+     </div>
+ </div>
