Add the New and Edit Product logic

--- a/src/app/product-list/product-detail/product-detail.component.html
+++ b/src/app/product-list/product-detail/product-detail.component.html
@@ -12,29 +12,6 @@
  </div>
  <div class="row">
      <div class="col-xs-12">
-         <!-- <div class="btn-group" appDropdown>
-             <button type="button" class="btn btn-primary dropdown-toggle">
-                 Manage Product<span class="caret"></span>
-             </button>
-             <ul class="dropdown-menu">
-                 <li><a style="cursor: pointer;">Edit Recipe</a></li>
-                 <li><a style="cursor: pointer;">Delete Recipe</a></li>
-             </ul>
-         </div> -->
-         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown button
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
-     </div>
- </div>
- <div class="row">
-     <div class="col-xs-12">
          {{product.description}}
      </div>
  </div>
@@ -49,3 +26,10 @@
          </ul>
      </div>
  </div>
+ <br>
+ <div class="row">
+    <div class="col-xs-12">
+        <button type="button" class="btn btn-secondary" (click)="onEditProduct()">Edit</button>
+        <button type="button" class="btn btn-danger">Delete</button>
+    </div>
+</div>
