--- a/src/app/product-list/product-edit/product-edit.component.html
+++ b/src/app/product-list/product-edit/product-edit.component.html
@@ -6,6 +6,7 @@
                    <button 
                    type="submit" 
                    class="btn btn-success"
+                   [disabled]=!ProductForm.valid
                    >Save</button>
                    <button type="button" class="btn btn-danger">Cancel</button>
                </div>
